--- a/incapp/incidents/templates/index.html
+++ b/incapp/incidents/templates/index.html
@@ -4,6 +4,18 @@
 
 
 <div style="overflow-x:auto;">
+<div class="navbar-collapse collapse">
+  <div class="navbar-form navbar-right">
+  <p>Welcome {{ request.user.username }}</p>
+    {% if request.user.is_authenticated %}
+      <a id="logout" href="/accounts/logout" class="btn btn-success">Logout</a>
+    {% else %} 
+      <a id="google_login" href="/accounts/google/login" class="btn btn-success">
+        Sign in with Google
+      </a>
+    {% endif %}
+  </div>
+</div><!--/.navbar-collapse -->
 <h1>Incident Dashboard - Main Menu</h1>
     <ul>
         <li><a href="../recent/">Most Recent Incidents</li>
